--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "App/Macros.php"
+            "app/Macros.php"
         ]
     },
     "autoload-dev": {
